# toy_problems

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  babel.config.js  build.gradle  go.mod  jest.config.js  package-lock.json  package.json  runTests.py  settings.gradle  tests.cpp  tsconfig.json
src/absolutePermutation/: README.md  absolutePermutation.test.ts  absolutePermutation.ts
src/arrayManipulation/: ArrayManipulation.java  ArrayManipulationTest.java
src/balancedBrackets/: README.md  balancedBrackets.test.ts  balancedBrackets.ts
src/biggerIsGreater/: BiggerIsGreater.java  BiggerIsGreaterTest.java  README.md
src/blackJack/: blackJack.test.ts  blackJack.ts
src/chefAndGroups/: README.md  chefAndGroups.py  chefAndGroupsTests.py
src/climbingLeaderboard/: climbingLeaderboard.cpp  climbingLeaderboardTests.cpp
src/comparator/: README.md  comparator.cpp  comparator.h  comparatorTests.cpp
src/containerOfBalls/: README.md  containerOfBalls.py  containerOfBallsTests.py
src/countStrings/: README.md  countStrings.cpp  countStrings.h  countStringsTests.cpp
src/countingValleys/: countingValleysTests.py
src/courseSchedule/: CourseSchedule.java  CourseScheduleTest.java  README.md
src/cycleDetection/: cycleDetectionTests.py
src/davisStaircase/: DavisStairCase.java  DavisStairCaseTest.java  README.md
src/designHashMap/: designHashMap.go  designHashMap_test.go
src/determiningDNAHealth/: DeterminingDNAHealth.java  Dna.java
src/diwaliLights/: DiwaliLightsTest.java
src/encryption/: README.md  encryption.cpp  encryption.h  encryptionTests.cpp
(+109 files in other folders)
